# sensorhub-firmware

./: .gitignore  CMakeLists.txt  README.md
app/: alarm.c  alarm.h  ema.c  ema.h  fmt.c  fmt.h  ringbuf.c  ringbuf.h  sampler.c  sampler.h  shell.c  shell.h  stats.c  stats.h
cmake/: arm-none-eabi.cmake
docs/: INTERVIEW.md
docs/lessons/: 01-c-essentials.md  02-how-an-mcu-boots.md  03-memory-mapped-io.md  04-interrupts.md  05-fixed-memory-and-fixed-point.md  06-state-machines-and-architecture.md
tests/: test_main.c
tools/: demo_session.ps1
